--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <div id="hasil" style="visibility: hidden;">
                     <img id="foto-pahlawan" alt="Foto pahlawan" width="100%">
-                    <h3 class="text-center" id="nama-pahlawan" style="color: white;"></h2>
+                    <h3 class="text-center mt-5" id="nama-pahlawan" style="color: white;"></h2>
                 </div>
             </div>
         </div>
